# vpnm

./: .gitignore  Dockerfile  Dockerfile.install  Dockerfile.main  README.md  app.py  asynctest.py  echo  github_api.py  install.py  install_test.py  pyproject.toml  requirements.txt  vpnm.spec
.github/workflows/: build.yml  cd.yml  ci-cd.yml  install.yml  install.yml.bak  pre-release.yml  release.yml
tests/: test_vpnm.py
vpnm/: __init__.py  app.py  systemd.py  templates.py  utils.py  vpnmd_api.py  web_api.py
