[tool.poetry]
name = "vpnm"
version = "1.1.0"
description = ""
authors = ["Anatolio Nikiforidis <nikiforova693@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.0"
requests = "^2.25.1"
anyd = "^0.3.5"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"
pylint = "^2.8.2"
pyinstaller = "^4.3"
mypy = "^0.910"
types-requests = "^2.25.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.semantic_release]
branch = "main"
version_variable = [
    'vpnm/__init__.py:__version__',
]
version_toml = [
    'pyproject.toml:tool.poetry.version',
]
build_command = "pyinstaller -F -n vpnm --clean vpnm/app.py"
