[tool.poetry]
name = "vpnm"
version = "0.1.0"
description = ""
authors = ["Anatolio Nikiforidis <nikiforova693@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
requests = "^2.25.1"
anyd = "^0.4.1"
simple-term-menu = "^1.3.0"
vpnmauth = {git = "https://github.com/anatolio-deb/vpnmauth.git"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"
pylint = "^2.8.2"
pyinstaller = "^4.3"
mypy = "^0.910"
types-requests = "^2.25.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
vpnm = "vpnm.app:cli"
